NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

= V1.5.0 - soon =
* NEW : Backup and Recover function for images (THX to Simone Fumagalli)
* NEW : Resize images after upload (THX to Simone Fumagalli)
* Changed : Rename query var from slideshow to imagerotator for compat reason with other plugin
* Bugfix : Select album preview from gallery preview pics instead random list
* Bugfix : Keep fix dimension in edit thumbnail operation
* Bugfix : Import meta data didn't work correct for existing images
* Removed : Canonical link is now part of Wordpress 2.9

= V1.4.3 - 16.11.2009 =
* Bugfix : Urlencode XML file path for sildeshow

= V1.4.2 - 16.11.2009 =
* Changed : Load sildeshow XML not longer via relative path
* Bugfix : No imagebrowser in carousel mode
* Bugfix : JS Effect navigation based on wrong array structure
* Bugfix : Remove whitespaces from meta import
* Bugfix : Capability check for upgrade notice
* Removed : Hide "more settings" for now, causes problems with IE and jQuery UI tabs

= V1.4.1 - 10.11.2009 =
* Bugfix : Capabilites could not be saved
* Bugfix : Ajax pagination option not saved
* Bugfix : echo nggSlideshowWidget() for compat reason

= V1.4.0 - 08.11.2009 =
* NEW : Automatic rotate images during upload or via manage gallery page (THX to Simone Fumagalli)
* NEW : Include Bulkupdate for gallery overview, require PHP 5.2
* NEW : XMLRPC support with 4 new methods : see xmlrpc.php for more information
* NEW : Recent and random images can be taken from a specific gallery using the id=x parameter in the shortcode (THX to Prollius)
* NEW : Recent images can be recent by exif date (instead of database id) by using the mode=recentdate parameter in the shortcode  (THX to Prollius)
* NEW : Introduce the WP_Object_cache and meta_data
* NEW : Various new hooks and filters
* Added : Better support for role manager plugin (THX to Mattias Buelens)
* Added : New option to add hidden images. Needed to show all images in a modal window (Thickbox, Lightbox et.)